fixed formatting errors, added PDF output.

--- a/main.tex
+++ b/main.tex
@@ -11,7 +11,6 @@
 \usepackage[colorinlistoftodos]{todonotes}
 
 \title{On the intrinsic sterility of 3D printing}
-=+
 \author[1]{Russell Y. Neches}
 \author[2]{Kaitlin J. Flynn}
 \author[3,4]{Luis Zaman}
@@ -42,7 +41,7 @@ bacteria and cell culture.
 \end{abstract}
 
 \keywords{3D printing, cell culture, microbiology, sterile technique, methods,
-\PLA, polylactic acid}
+PLA, polylactic acid}
 
 \begin{document}
 
