--- a/main.tex
+++ b/main.tex
@@ -40,8 +40,7 @@ bacteria and cell culture.
 
 \end{abstract}
 
-\keywords{3D printing, cell culture, microbiology, sterile technique, methods,
-PLA, polylactic acid}
+\keywords{}
 
 \begin{document}
 
