renamed figure files

--- a/main.tex
+++ b/main.tex
@@ -130,7 +130,7 @@ ten seconds and several minutes.
 \begin{figure}
   \begin{minipage}[c]{0.60\linewidth}
     \centering
-    \includegraphics[width=\textwidth]{Pasteurization}
+    \includegraphics[width=\textwidth]{Fig1}
     \par\vspace{0pt}
   \end{minipage}%
   \begin{minipage}[c]{0.40\linewidth}
@@ -183,7 +183,7 @@ conditions known to enrich for a broad spectrum of microorganisms.
 
 \begin{figure}
   \centering
-    \includegraphics[width=0.5\textwidth]{preliminary_test}
+    \includegraphics[width=0.5\textwidth]{Fig2}
 
     \caption{ Growth after 96 hours at 37C in a shaking incubator. The 
     leftmost beaker contains LB media inoculated with PLA plastic extruded
@@ -304,28 +304,28 @@ marrow-derived macrophages under these conditions.
     \centering
     \begin{subfigure}[b]{0.24\textwidth}
         \centering
-        \includegraphics[width=\textwidth]{mouse_UV}
+        \includegraphics[width=\textwidth]{Fig3a}
         \caption{UV treated}
         \label{fig:mouse_uv}
     \end{subfigure}
     \hfill
     \begin{subfigure}[b]{0.24\textwidth}
         \centering
-        \includegraphics[width=\textwidth]{mouse_noUV}
+        \includegraphics[width=\textwidth]{Fig3b}
         \caption{No UV treatment}
         \label{fig:mouse_nouv}
     \end{subfigure}
     \hfill
     \begin{subfigure}[b]{0.24\textwidth}
         \centering
-        \includegraphics[width=\textwidth]{mouse_UVbetween}
+        \includegraphics[width=\textwidth]{Fig3c}
         \caption{Intermediate UV}
         \label{fig:nouse_uvbetween}
     \end{subfigure}
     \hfill
     \begin{subfigure}[b]{0.24\textwidth}
         \centering
-        \includegraphics[width=\textwidth]{mouse_control}
+        \includegraphics[width=\textwidth]{Fig3d}
         \caption{Control}
         \label{fig:mouse_control}
     \end{subfigure}
@@ -372,28 +372,28 @@ require a non-standard part.
     \centering
         \begin{subfigure}[b]{0.24\textwidth}
         \centering
-        \includegraphics[width=\textwidth]{swim_plate_0}
+        \includegraphics[width=\textwidth]{Fig4a}
         \caption{3D model}
         \label{fig:swim_plate_0}
     \end{subfigure}
     \hfill
     \begin{subfigure}[b]{0.24\textwidth}
         \centering
-        \includegraphics[width=\textwidth]{swim_plate_1}
+        \includegraphics[width=\textwidth]{Fig4b}
         \caption{Fabrication}
         \label{fig:swim_plate_1}
     \end{subfigure}
     \hfill
     \begin{subfigure}[b]{0.24\textwidth}
         \centering
-        \includegraphics[width=\textwidth]{swim_plate_2}
+        \includegraphics[width=\textwidth]{Fig4c}
         \caption{Leak test}
         \label{fig:swim_plate_2}
     \end{subfigure}
     \hfill
     \begin{subfigure}[b]{0.24\textwidth}
         \centering
-        \includegraphics[width=\textwidth]{swim_plate_3}
+        \includegraphics[width=\textwidth]{Fig4d}
         \caption{Motility assay}
         \label{fig:swim_plate_3}
     \end{subfigure}
@@ -485,21 +485,21 @@ tubes or conical tubes for storage and shipping.
     \centering
     \begin{subfigure}[b]{0.32\textwidth}
         \centering
-        \includegraphics[width=\textwidth]{test_part_openscad}
+        \includegraphics[width=\textwidth]{Fig5a}
         \caption{Model in OpenSCAD.}
         \label{fig:openscad}
     \end{subfigure}
     \hfill
     \begin{subfigure}[b]{0.32\textwidth}
         \centering
-        \includegraphics[width=\textwidth]{test_part_cura}
+        \includegraphics[width=\textwidth]{Fig5b}
         \caption{Toolpath in Cura.}
         \label{fig:cura}
     \end{subfigure}
     \hfill
     \begin{subfigure}[b]{0.32\textwidth}
         \centering
-        \includegraphics[width=\textwidth]{foil_printing}
+        \includegraphics[width=\textwidth]{Fig5c}
         \caption{Printing on foil.}
         \label{fig:foil}
     \end{subfigure}
@@ -539,7 +539,7 @@ hours.
 
 \begin{figure}[h!]
   \centering
-    \includegraphics[width=0.5\textwidth]{sterile_print_zaman}
+    \includegraphics[width=0.5\textwidth]{Fig6}
 
     \caption{After 48 hours, only the positive control (left) was
     contaminated. Printed cylinders in LB did not appear to contaimate
@@ -559,7 +559,7 @@ to a handling error. No growth was observed for any parts grown in TB.
 
 \begin{figure}[!h]
   \centering
-    \includegraphics[width=0.5\textwidth]{terrific_broth}
+    \includegraphics[width=0.5\textwidth]{Fig7}
     
     \caption{3D printed parts from UC Davis with and without UV treatement
     were suspended in sterile Terrific Broth supplemented with potassium
@@ -580,7 +580,7 @@ Section \ref{contamination_id}).
 
 \begin{figure}[!h]
   \centering
-    \includegraphics[width=0.5\textwidth]{anaerobe_meat_broth}
+    \includegraphics[width=0.5\textwidth]{Fig8}
 
     \caption{After two weeks in anaerobic chamber at 37C in ``meat broth,'' a
     non-UV treated part from UC Davis exhibited evidence of growth. All other
@@ -627,7 +627,7 @@ post printing.
 
 \begin{figure}[h!]
   \centering
-    \includegraphics[width=0.5\textwidth]{streak_plate}
+    \includegraphics[width=0.5\textwidth]{Fig9}
  
     \caption{10$\mu$l of each AYE tube (positive control, PLA plastic and
     negative control) was struck out on Charcoal Yeast Extract solid media
