--- a/main.tex
+++ b/main.tex
@@ -127,6 +127,19 @@ process calls for different  extrusion rates over the course of a print, the
 thermoplastic  generally dwells in the melt region of the nozzle for between
 ten seconds and several minutes.
 
+To calculate the thermal contact time for an FDM 3D printer, we use the
+formula
+
+\begin{equation}
+T(f) = \frac{m \pi \left(\frac{d_f}{2}\right)^2}{ d_n h f }
+\end{equation}
+
+\noindent where $f$ is the feed rate in millimeters per second, $h$ is the
+layer height, $d_f$ is the filament diameter, $d_n$ is the nozzle diameter,
+$m$ is the length of the melt zone. Because the length of the melt zone can be
+difficult to measure directly, but it may be inferred by using the area within
+the nozzle that has to be cleaned of melted plastic after a jam.
+
 \begin{figure}
   \begin{minipage}[c]{0.60\linewidth}
     \centering
