added scale bars to Figure 3

--- a/main.tex
+++ b/main.tex
@@ -413,13 +413,15 @@ the growth of bone marrow-derived macrophages under these conditions.
         \label{fig:mouse_control}
     \end{subfigure}
 
-    \caption{ Macrophages derived from mouse bone-marrow after incubation with 
-    3D printed parts that had been treated with UV (a), without UV treatment
-    (b), and treated with UV after handling and before incubation (c) and a
-    control set of cells grown without 3D parts (d). Photos representative of
-    three replicates in two independent experiments. Cell size, morphology and
-    confluency were determined to be consistent across all experimental
-    groups.}
+    \caption{ Macrophages derived from mouse bone-marrow after
+      incubation with 3D printed parts that had been treated with UV
+      (a), without UV treatment (b), and treated with UV after
+      handling and before incubation (c) and a control set of cells
+      grown without 3D parts (d). Photos representative of three
+      replicates in two independent experiments. Cell size, morphology
+      and confluency were determined to be consistent across all
+      experimental groups. Scale bar in panels (a), (b) and (c)
+      reprsent 100$\mu$m, and 200$\mu$m in panel (d).}
     
     \label{fig:mousecells}
 \end{figure}
