edit from @FOXFOXFOX

--- a/main.tex
+++ b/main.tex
@@ -221,19 +221,20 @@ nozzle.
       printing. The extrusion process most closely resembles
       pasteurization, in which non-sterile liquid is forced through a
       narrow, heated tube. High- temperature, short-time (HTST)
-      pasteurization used for milk, fruit juices and other beverages
-      and ingredients. Ultra-high temperature (UTH) processing is used
-      to produce products such as shelf-stable milk that do not
-      require refrigeration. Stove- top pasteurization (30 minutes at
-      63$\,^{\circ}\mathrm{C}$) is indicated as ``stovetop''
-      pasteurization. Thermization, a process used to extend the shelf
-      life of raw milk that cannot be immediately used, such as at
-      cheese making facilities. Typical autoclave cycles using
-      prevacuum, and gravity displacement are indicated as
-      ``prevacuum'' and ``gravity,'' respectively. A typical ``flash''
-      sterilization cycle for a gravity displacement sterilizer is
-      also indicated. Pasteurization processes are indicated in black,
-      autoclave processes in red, and thermization in orange.}
+      pasteurization is used for milk, fruit juices and other
+      beverages and ingredients. Ultra-high temperature (UTH)
+      processing is used to produce products such as shelf-stable milk
+      that do not require refrigeration. Stove- top pasteurization (30
+      minutes at 63$\,^{\circ}\mathrm{C}$) is indicated as
+      ``stovetop'' pasteurization. Thermization, a process used to
+      extend the shelf life of raw milk that cannot be immediately
+      used, such as at cheese making facilities. Typical autoclave
+      cycles using prevacuum, and gravity displacement are indicated
+      as ``prevacuum'' and ``gravity,'' respectively. A typical
+      ``flash'' sterilization cycle for a gravity displacement
+      sterilizer is also indicated. Pasteurization processes are
+      indicated in black, autoclave processes in red, and thermization
+      in orange.}
 
 \label{fig:pasteurization}
 \end{figure}
