getting figures into shape for PeerJ

--- a/main.tex
+++ b/main.tex
@@ -386,33 +386,36 @@ the growth of bone marrow-derived macrophages under these conditions.
 
 \begin{figure}
     \centering
-    \begin{subfigure}[b]{0.24\textwidth}
-        \centering
-        \includegraphics[width=\textwidth]{Fig3a}
-        \caption{UV treated}
-        \label{fig:mouse_uv}
-    \end{subfigure}
-    \hfill
-    \begin{subfigure}[b]{0.24\textwidth}
-        \centering
-        \includegraphics[width=\textwidth]{Fig3b}
-        \caption{No UV treatment}
-        \label{fig:mouse_nouv}
-    \end{subfigure}
-    \hfill
-    \begin{subfigure}[b]{0.24\textwidth}
-        \centering
-        \includegraphics[width=\textwidth]{Fig3c}
-        \caption{Intermediate UV}
-        \label{fig:nouse_uvbetween}
-    \end{subfigure}
-    \hfill
-    \begin{subfigure}[b]{0.24\textwidth}
-        \centering
-        \includegraphics[width=\textwidth]{Fig3d}
-        \caption{Control}
-        \label{fig:mouse_control}
-    \end{subfigure}
+    
+    % \begin{subfigure}[b]{0.24\textwidth}
+    %     \centering
+    %     \includegraphics[width=\textwidth]{Fig3a}
+    %     \caption{UV treated}
+    %     \label{fig:mouse_uv}
+    % \end{subfigure}
+    % \hfill
+    % \begin{subfigure}[b]{0.24\textwidth}
+    %     \centering
+    %     \includegraphics[width=\textwidth]{Fig3b}
+    %     \caption{No UV treatment}
+    %     \label{fig:mouse_nouv}
+    % \end{subfigure}
+    % \hfill
+    % \begin{subfigure}[b]{0.24\textwidth}
+    %     \centering
+    %     \includegraphics[width=\textwidth]{Fig3c}
+    %     \caption{Intermediate UV}
+    %     \label{fig:nouse_uvbetween}
+    % \end{subfigure}
+    % \hfill
+    % \begin{subfigure}[b]{0.24\textwidth}
+    %     \centering
+    %     \includegraphics[width=\textwidth]{Fig3d}
+    %     \caption{Control}
+    %     \label{fig:mouse_control}
+    % \end{subfigure}
+
+    \includegraphics[width=1.0\textwidth]{Fig3}
 
     \caption{ Macrophages derived from mouse bone-marrow after
       incubation with 3D printed parts that had been treated with UV
@@ -421,8 +424,7 @@ the growth of bone marrow-derived macrophages under these conditions.
       grown without 3D parts (d). Photos representative of three
       replicates in two independent experiments. Cell size, morphology
       and confluency were determined to be consistent across all
-      experimental groups. Scale bar in panels (a), (b) and (c)
-      reprsent 100$\mu$m, and 200$\mu$m in panel (d).}
+      experimental groups.}
     
     \label{fig:mousecells}
 \end{figure}
@@ -458,33 +460,36 @@ approach for applications that may require a non-standard part.
 
 \begin{figure}
     \centering
-        \begin{subfigure}[b]{0.24\textwidth}
-        \centering
-        \includegraphics[width=\textwidth]{Fig4a}
-        \caption{3D model}
-        \label{fig:swim_plate_0}
-    \end{subfigure}
-    \hfill
-    \begin{subfigure}[b]{0.24\textwidth}
-        \centering
-        \includegraphics[width=\textwidth]{Fig4b}
-        \caption{Fabrication}
-        \label{fig:swim_plate_1}
-    \end{subfigure}
-    \hfill
-    \begin{subfigure}[b]{0.24\textwidth}
-        \centering
-        \includegraphics[width=\textwidth]{Fig4c}
-        \caption{Leak test}
-        \label{fig:swim_plate_2}
-    \end{subfigure}
-    \hfill
-    \begin{subfigure}[b]{0.24\textwidth}
-        \centering
-        \includegraphics[width=\textwidth]{Fig4d}
-        \caption{Motility assay}
-        \label{fig:swim_plate_3}
-    \end{subfigure}
+    
+    % \begin{subfigure}[b]{0.24\textwidth}
+    %     \centering
+    %     \includegraphics[width=\textwidth]{Fig4a}
+    %     \caption{3D model}
+    %     \label{fig:swim_plate_0}
+    % \end{subfigure}
+    % \hfill
+    % \begin{subfigure}[b]{0.24\textwidth}
+    %     \centering
+    %     \includegraphics[width=\textwidth]{Fig4b}
+    %     \caption{Fabrication}
+    %     \label{fig:swim_plate_1}
+    % \end{subfigure}
+    % \hfill
+    % \begin{subfigure}[b]{0.24\textwidth}
+    %     \centering
+    %     \includegraphics[width=\textwidth]{Fig4c}
+    %     \caption{Leak test}
+    %     \label{fig:swim_plate_2}
+    % \end{subfigure}
+    % \hfill
+    % \begin{subfigure}[b]{0.24\textwidth}
+    %     \centering
+    %     \includegraphics[width=\textwidth]{Fig4d}
+    %     \caption{Motility assay}
+    %     \label{fig:swim_plate_3}
+    % \end{subfigure}
+
+    \includegraphics[width=1.0\textwidth]{Fig4}
 
     \caption{A custom device for a motility assay fabricated using 3D 
     printing. The device was found to be sterile without autoclaveing 
@@ -576,27 +581,30 @@ storage and shipping.
 
 \begin{figure}
     \centering
-    \begin{subfigure}[b]{0.32\textwidth}
-        \centering
-        \includegraphics[width=\textwidth]{Fig5a}
-        \caption{Model in OpenSCAD.}
-        \label{fig:openscad}
-    \end{subfigure}
-    \hfill
-    \begin{subfigure}[b]{0.32\textwidth}
-        \centering
-        \includegraphics[width=\textwidth]{Fig5b}
-        \caption{Toolpath in Cura.}
-        \label{fig:cura}
-    \end{subfigure}
-    \hfill
-    \begin{subfigure}[b]{0.32\textwidth}
-        \centering
-        \includegraphics[width=\textwidth]{Fig5c}
-        \caption{Printing on foil.}
-        \label{fig:foil}
-    \end{subfigure}
 
+    % \begin{subfigure}[b]{0.32\textwidth}
+    %     \centering
+    %     \includegraphics[width=\textwidth]{Fig5a}
+    %     \caption{Model in OpenSCAD.}
+    %     \label{fig:openscad}
+    % \end{subfigure}
+    % \hfill
+    % \begin{subfigure}[b]{0.32\textwidth}
+    %     \centering
+    %     \includegraphics[width=\textwidth]{Fig5b}
+    %     \caption{Toolpath in Cura.}
+    %     \label{fig:cura}
+    % \end{subfigure}
+    % \hfill
+    % \begin{subfigure}[b]{0.32\textwidth}
+    %     \centering
+    %     \includegraphics[width=\textwidth]{Fig5c}
+    %     \caption{Printing on foil.}
+    %     \label{fig:foil}
+    % \end{subfigure}
+
+    \includegraphics[width=1.0\textwidth]{Fig5}
+    
     \caption{A very simple model of a cylinder was created in OpenSCAD
       and exported in STL format. (a) The G-code toolpath
       visualization of test part in Cura. The slicing engine was set
@@ -638,7 +646,7 @@ tubes with printed parts showed signs of growth after 96 hours.
 
     \caption{After 48 hours, only the positive control (left) was
       contaminated. Printed cylinders in LB did not appear to
-      contaimate media.}
+      contaminate the media.}
 
 \end{figure}
 
@@ -892,7 +900,7 @@ they were also able produce sterile parts (Fig. \ref{objet}).
 
 \begin{figure}[h!]
   \centering
-    \includegraphics[width=0.5\textwidth]{objet_tubes.png}
+    \includegraphics[width=0.5\textwidth]{Fig10}
  
     \caption{ A group of cylinders were printed on an Objet Eden
       260. 24 cylinders were transfered directly from the printing
