--- a/main.tex
+++ b/main.tex
@@ -10,6 +10,9 @@
 \usepackage{booktabs}
 \usepackage[colorinlistoftodos]{todonotes}
 
+\usepackage{lineno}
+\linenumbers
+
 \title{On the intrinsic sterility of 3D printing}
 \author[1]{Russell Y. Neches}
 \author[2]{Kaitlin J. Flynn}
