--- a/main.tex
+++ b/main.tex
@@ -705,11 +705,13 @@ sequencing was performed on resulting colonies (see Section
 Sterility of 3D printed parts was assessed by incubating each part
 with bone marrow-derived macrophages from femurs of C57BL/6 mice
 (Jackson Laboratories) cultured in RPMI-1640 containing 10\%
-heat-inactivated fetal bovine serum (FBS) (Gibco)
-\cite{cell_culture}. Microscopy was performed by culturing macrophages
-in plastic dishes with 3D parts for 6 days after the initial isolation
-from bone marrow in L-cell conditioned media and examining under light
-microscope.
+heat-inactivated fetal bovine serum (FBS) (Gibco) \cite{cell_culture}.
+Microscopy was performed by culturing macrophages in plastic dishes
+with 3D parts for 6 days after the initial isolation from bone marrow
+in L-cell conditioned media and examining under light microscope. The
+University Committee on Use and Care of Animals approved all
+experiments conducted in this study (principal investigator Michele
+Swanson; protocol reference number PRO00005100).
 
 \subsection{Identification of contaminating organisms}
 \label{contamination_id}
