fixed hardcoded subfigure reference

--- a/main.tex
+++ b/main.tex
@@ -373,19 +373,18 @@ printed either with or without UV treatment were cultured with bone
 marrow-derived mouse macrophages for six days. Contamination was
 assessed by plating on LB and charcoal yeast extract thymidine (CYET)
 agar plates and examination under light microscopy.  No evidence of
-contamination was found either in cells alone (Figure
-\ref{fig:mouse_control}) or cells cultured with parts either printed
-with (Figure \ref{fig:mouse_uv}) or without UV (Figure
-\ref{fig:mouse_nouv}) as judged by growth on agar plates and
-microscopy. Cell morphology and growth rate appeared to resemble the
-control cells grown in the absence of a 3D printed part and no visible
-contaminants were observed. Additionally, cells grown in the presence
-of 3D printed parts were competent for infection by {\em Legionella
-  pneumophila} (data not shown). Cells appeared to grow normally
-immediately adjacent to the part, though the opacity of the 3D printed
-part prevented inspection for growth directly on the printed
-surface. Thus, 3D printed parts do not appear to contaminate or affect
-the growth of bone marrow-derived macrophages under these conditions.
+contamination was found either in cells alone (Figure 3d) or cells
+cultured with parts either printed with (Figure 3a) or without UV
+(Figure 3b) as judged by growth on agar plates and microscopy. Cell
+morphology and growth rate appeared to resemble the control cells
+grown in the absence of a 3D printed part and no visible contaminants
+were observed. Additionally, cells grown in the presence of 3D printed
+parts were competent for infection by {\em Legionella pneumophila}
+(data not shown). Cells appeared to grow normally immediately adjacent
+to the part, though the opacity of the 3D printed part prevented
+inspection for growth directly on the printed surface. Thus, 3D
+printed parts do not appear to contaminate or affect the growth of
+bone marrow-derived macrophages under these conditions.
 
 \begin{figure}
     \centering
